--- a/course-lms-web/.prettierrc
+++ b/course-lms-web/.prettierrc
@@ -1,4 +1,13 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "semi": true,
+  "overrides": [
+    {
+      "files": ["*.html","*.spec.ts"],
+      "options": {
+        "printWidth": 120
+      }
+    }
+  ]
 }
