--- a/course-lms-web/package.json
+++ b/course-lms-web/package.json
@@ -12,14 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.3",
-    "@angular/common": "~10.1.3",
+    "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@angular/cdk": "^10.2.2",
+    "@angular/material": "^10.2.2",
+    "@ngneat/tailwind": "^1.0.1",
+    "tailwindcss": "1.8.10",
     "rxjs": "~6.5.5",
+    "prettier": "^2.1.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -27,6 +32,7 @@
     "@angular-devkit/build-angular": "~0.1001.3",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
+    "@angular-builders/custom-webpack": "10.0.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -38,7 +44,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "4.0.2",
+    "postcss-scss": "3.0.2",
     "protractor": "~7.0.0",
+    "tailwindcss": "1.8.10",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
